feat: Implement unified Armory Tidy Service and refactor Armory TidyController
[변경 배경]
- Controller가 직접 Mapper를 호출해 계층 분리가 약했고 확장성 저하 발생
- Raw → Tidy 전체 변환을 하나의 Service에서 통합적으로 처리할 필요 증가
- EngravingMapper 타입 불일치로 empty list 반환 문제 발생

[변경 대상 파일]
src/main/java/com/example/ListArk/service/tidy/ArmoryTidyService.java
src/main/java/com/example/ListArk/controller/ArmoryTidyController.java
src/main/java/com/example/ListArk/mapper/armory/EngravingTidyMapper.java

[상세 변경사항]
1. ArmoryTidyService 구축
  - Raw ArmoryDto 조회(getRaw) 및 통합 tidy 변환(toTidy(name)) 기능 구현
  - 11개 Tidy Mapper 연동, logCheck()를 활용한 tidy 변환 단계 로깅 추가
  - raw=null 시 empty() 반환하여 서비스 안정성 보장

2. EngravingTidyMapper 구조 전면 수정
  - EngravingDto 구조를 실제 API 스펙에 맞게 재구성
  - tooltip 기반 각인 레벨 추출 로직 개선
  - “등급 + 이름 Lv.레벨” 형태로 tidy 문자열 변환 적용

3. ArmoryTidyController 리팩토링
  - Controller는 Service만 호출하는 구조로 단순화
  - profile, equipment, engravings 등 모든 단일 엔드포인트를 Service 레이어에 일원화

[변경 전/후 비교]
Before:
- ArmoryTidyController → Raw API → 각 Mapper 직접 호출
- Engraving tidy 구조가 API 스펙과 불일치

After:
- ArmoryController → ArmoryTidyService → Mapper 일관 호출
- Engraving tidy 구조가 API 실제 데이터 기반으로 정확히 변환됨
- 유지보수성과 테스트 용이성 증가

[기술 스택]
- Java 17
- Spring Boot 3.x
- Lombok
- Jackson (JsonNode)

[적용 패턴]
- Service 계층 구조: Controller → Service → Mapper
- logCheck() 기반 tidy 변환 상태 로깅 적용

[테스트 검증]
- 정상 tidy 변환 동작 확인
- 로깅 정상 동작
- 빈 리스트 및 null 입력 케이스 정상 처리
- API 응답 구조 기존과 동일하게 유지

[영향도 분석]
- 기능 변화 없음 (Pure refactor)
- API 하위 호환성 100% 유지
- 프론트엔드 null 처리 부담 감소

[후속 작업]
1. tidy endpoint 테스트 추가 (빈 값/구조 검증)
2. Swagger/OpenAPI 문서화
3. Tidy DTO 스키마 README 업데이트
4. Mock 기반 단위 테스트 추가
5. GlobalExceptionHandler 도입
6. Armory 캐싱 및 캐릭터 검색 기능 확장